Potentially the final (camera-ready) version

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -287,3 +287,19 @@
   Title           = {The {O}n-{L}ine {E}ncyclopedia of {I}nteger {S}equences},
   Year            = 2025
 }
+@inproceedings{DBLP:conf/aaai/MalhotraS22,
+  author          = {Sagar Malhotra and Luciano Serafini},
+  title           = {Weighted Model Counting in {FO2} with Cardinality
+                  Constraints and Counting Quantifiers: {A} Closed Form Formula},
+  booktitle       = {{AAAI}},
+  pages           = {5817--5824},
+  publisher       = {{AAAI} Press},
+  year            = {2022},
+  doi             = {10.1609/AAAI.V36I5.20525}
+}
+@book{DBLP:books/aw/RN2020,
+  author          = {Stuart Russell and Peter Norvig},
+  title           = {Artificial Intelligence: {A} Modern Approach (4th Edition)},
+  publisher       = {Pearson},
+  year            = {2020}
+}
