--- a/doc/paper/plot.tex
+++ b/doc/paper/plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2025-02-02 11:12:11
+% Created by tikzDevice version 0.12.6 on 2025-06-03 07:37:32
 % !TEX encoding = UTF-8 Unicode
 \documentclass[10pt]{article}
 \usepackage{tikz}
@@ -79,15 +79,7 @@
 	(133.28,126.48);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.91, 89.74) --
-	( 41.73, 84.24) --
-	( 45.54, 84.24) --
-	( 49.36, 84.34) --
-	( 53.17, 87.56) --
-	( 56.99,109.01);
-\definecolor{drawColor}{RGB}{117,112,179}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] ( 37.91, 81.38) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.91, 81.38) --
 	( 41.73, 81.38) --
 	( 45.54, 81.38) --
 	( 49.36, 81.38) --
@@ -99,92 +91,76 @@
 	( 72.24, 81.81) --
 	( 76.06, 83.15) --
 	( 79.87, 87.02);
-\definecolor{fillColor}{RGB}{117,112,179}
+\definecolor{drawColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] ( 35.95, 79.42) --
-	( 39.87, 79.42) --
-	( 39.87, 83.35) --
-	( 35.95, 83.35) --
-	cycle;
-
-\path[fill=fillColor] ( 39.77, 79.42) --
-	( 43.69, 79.42) --
-	( 43.69, 83.35) --
-	( 39.77, 83.35) --
-	cycle;
-
-\path[fill=fillColor] ( 43.58, 79.42) --
-	( 47.50, 79.42) --
-	( 47.50, 83.35) --
-	( 43.58, 83.35) --
-	cycle;
-
-\path[fill=fillColor] ( 47.39, 79.42) --
-	( 51.32, 79.42) --
-	( 51.32, 83.35) --
-	( 47.39, 83.35) --
-	cycle;
-
-\path[fill=fillColor] ( 51.21, 79.42) --
-	( 55.13, 79.42) --
-	( 55.13, 83.35) --
-	( 51.21, 83.35) --
-	cycle;
-
-\path[fill=fillColor] ( 55.02, 79.42) --
-	( 58.95, 79.42) --
-	( 58.95, 83.35) --
-	( 55.02, 83.35) --
-	cycle;
-
-\path[fill=fillColor] ( 58.84, 79.43) --
-	( 62.76, 79.43) --
-	( 62.76, 83.35) --
-	( 58.84, 83.35) --
-	cycle;
-
-\path[fill=fillColor] ( 62.65, 79.45) --
-	( 66.58, 79.45) --
-	( 66.58, 83.37) --
-	( 62.65, 83.37) --
-	cycle;
-
-\path[fill=fillColor] ( 66.47, 79.53) --
-	( 70.39, 79.53) --
-	( 70.39, 83.45) --
-	( 66.47, 83.45) --
-	cycle;
-
-\path[fill=fillColor] ( 70.28, 79.84) --
-	( 74.21, 79.84) --
-	( 74.21, 83.77) --
-	( 70.28, 83.77) --
-	cycle;
-
-\path[fill=fillColor] ( 74.10, 81.19) --
-	( 78.02, 81.19) --
-	( 78.02, 85.11) --
-	( 74.10, 85.11) --
-	cycle;
-
-\path[fill=fillColor] ( 77.91, 85.05) --
-	( 81.84, 85.05) --
-	( 81.84, 88.98) --
-	( 77.91, 88.98) --
-	cycle;
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] ( 37.91, 89.74) --
+	( 41.73, 84.24) --
+	( 45.54, 84.24) --
+	( 49.36, 84.34) --
+	( 53.17, 87.56) --
+	( 56.99,109.01);
 \definecolor{fillColor}{RGB}{27,158,119}
 
-\path[fill=fillColor] ( 37.91, 89.74) circle (  1.96);
+\path[fill=fillColor] ( 37.91, 81.38) circle (  1.96);
 
-\path[fill=fillColor] ( 41.73, 84.24) circle (  1.96);
+\path[fill=fillColor] ( 41.73, 81.38) circle (  1.96);
 
-\path[fill=fillColor] ( 45.54, 84.24) circle (  1.96);
+\path[fill=fillColor] ( 45.54, 81.38) circle (  1.96);
 
-\path[fill=fillColor] ( 49.36, 84.34) circle (  1.96);
+\path[fill=fillColor] ( 49.36, 81.38) circle (  1.96);
 
-\path[fill=fillColor] ( 53.17, 87.56) circle (  1.96);
+\path[fill=fillColor] ( 53.17, 81.38) circle (  1.96);
 
-\path[fill=fillColor] ( 56.99,109.01) circle (  1.96);
+\path[fill=fillColor] ( 56.99, 81.38) circle (  1.96);
+
+\path[fill=fillColor] ( 60.80, 81.39) circle (  1.96);
+
+\path[fill=fillColor] ( 64.62, 81.41) circle (  1.96);
+
+\path[fill=fillColor] ( 68.43, 81.49) circle (  1.96);
+
+\path[fill=fillColor] ( 72.24, 81.81) circle (  1.96);
+
+\path[fill=fillColor] ( 76.06, 83.15) circle (  1.96);
+
+\path[fill=fillColor] ( 79.87, 87.02) circle (  1.96);
+\definecolor{fillColor}{RGB}{117,112,179}
+
+\path[fill=fillColor] ( 35.95, 87.78) --
+	( 39.87, 87.78) --
+	( 39.87, 91.70) --
+	( 35.95, 91.70) --
+	cycle;
+
+\path[fill=fillColor] ( 39.77, 82.28) --
+	( 43.69, 82.28) --
+	( 43.69, 86.20) --
+	( 39.77, 86.20) --
+	cycle;
+
+\path[fill=fillColor] ( 43.58, 82.28) --
+	( 47.50, 82.28) --
+	( 47.50, 86.20) --
+	( 43.58, 86.20) --
+	cycle;
+
+\path[fill=fillColor] ( 47.39, 82.38) --
+	( 51.32, 82.38) --
+	( 51.32, 86.30) --
+	( 47.39, 86.30) --
+	cycle;
+
+\path[fill=fillColor] ( 51.21, 85.60) --
+	( 55.13, 85.60) --
+	( 55.13, 89.53) --
+	( 51.21, 89.53) --
+	cycle;
+
+\path[fill=fillColor] ( 55.02,107.05) --
+	( 58.95,107.05) --
+	( 58.95,110.97) --
+	( 55.02,110.97) --
+	cycle;
 \definecolor{drawColor}{gray}{0.70}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 34.10, 57.56) -- ( 34.10, 63.25);
@@ -328,25 +304,7 @@
 	(242.68,126.48);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (147.31, 84.74) --
-	(151.13, 84.06) --
-	(154.94, 83.93) --
-	(158.76, 83.97) --
-	(162.57, 84.20) --
-	(166.39, 84.27) --
-	(170.20, 84.38) --
-	(174.02, 86.20) --
-	(177.83, 93.38) --
-	(181.65,111.72);
-\definecolor{drawColor}{RGB}{217,95,2}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (147.31, 62.86) --
-	(151.13, 60.69) --
-	(154.94, 60.69) --
-	(158.76, 60.69);
-\definecolor{drawColor}{RGB}{117,112,179}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (147.31, 72.23) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] (147.31, 72.23) --
 	(151.13, 72.23) --
 	(154.94, 72.23) --
 	(158.76, 72.23) --
@@ -359,9 +317,9 @@
 	(185.46, 89.66) --
 	(189.28,106.37) --
 	(193.09,123.35);
-\definecolor{drawColor}{RGB}{231,41,138}
+\definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (147.31, 72.11) --
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (147.31, 72.11) --
 	(151.13, 72.11) --
 	(154.94, 72.11) --
 	(158.76, 72.11) --
@@ -374,179 +332,194 @@
 	(185.46, 89.67) --
 	(189.28,106.37) --
 	(193.09,123.35);
-\definecolor{fillColor}{RGB}{27,158,119}
+\definecolor{drawColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] (147.31, 84.74) circle (  1.96);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (147.31, 84.74) --
+	(151.13, 84.06) --
+	(154.94, 83.93) --
+	(158.76, 83.97) --
+	(162.57, 84.20) --
+	(166.39, 84.27) --
+	(170.20, 84.38) --
+	(174.02, 86.20) --
+	(177.83, 93.38) --
+	(181.65,111.72);
+\definecolor{drawColor}{RGB}{231,41,138}
 
-\path[fill=fillColor] (151.13, 84.06) circle (  1.96);
-
-\path[fill=fillColor] (154.94, 83.93) circle (  1.96);
-
-\path[fill=fillColor] (158.76, 83.97) circle (  1.96);
-
-\path[fill=fillColor] (162.57, 84.20) circle (  1.96);
-
-\path[fill=fillColor] (166.39, 84.27) circle (  1.96);
-
-\path[fill=fillColor] (170.20, 84.38) circle (  1.96);
-
-\path[fill=fillColor] (174.02, 86.20) circle (  1.96);
-
-\path[fill=fillColor] (177.83, 93.38) circle (  1.96);
-
-\path[fill=fillColor] (181.65,111.72) circle (  1.96);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (144.54, 72.11) -- (150.09, 72.11);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (147.31, 69.34) -- (147.31, 74.89);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.35, 72.11) -- (153.90, 72.11);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (151.13, 69.33) -- (151.13, 74.88);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (152.17, 72.11) -- (157.72, 72.11);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (154.94, 69.33) -- (154.94, 74.88);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (155.98, 72.11) -- (161.53, 72.11);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (158.76, 69.33) -- (158.76, 74.88);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (159.80, 72.11) -- (165.35, 72.11);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (162.57, 69.33) -- (162.57, 74.88);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (163.61, 72.11) -- (169.16, 72.11);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (166.39, 69.33) -- (166.39, 74.88);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (167.43, 72.11) -- (172.98, 72.11);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (170.20, 69.34) -- (170.20, 74.89);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (171.24, 72.15) -- (176.79, 72.15);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (174.02, 69.37) -- (174.02, 74.92);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (175.06, 72.59) -- (180.61, 72.59);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (177.83, 69.81) -- (177.83, 75.36);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (178.87, 76.89) -- (184.42, 76.89);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (181.65, 74.12) -- (181.65, 79.67);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (182.69, 89.67) -- (188.24, 89.67);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (185.46, 86.90) -- (185.46, 92.45);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (186.50,106.37) -- (192.05,106.37);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (189.28,103.59) -- (189.28,109.14);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (190.32,123.35) -- (195.86,123.35);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (193.09,120.57) -- (193.09,126.12);
-\definecolor{fillColor}{RGB}{217,95,2}
-
-\path[fill=fillColor] (147.31, 65.91) --
-	(149.96, 61.33) --
-	(144.67, 61.33) --
-	cycle;
-
-\path[fill=fillColor] (151.13, 63.74) --
-	(153.77, 59.17) --
-	(148.49, 59.17) --
-	cycle;
-
-\path[fill=fillColor] (154.94, 63.74) --
-	(157.59, 59.17) --
-	(152.30, 59.17) --
-	cycle;
-
-\path[fill=fillColor] (158.76, 63.74) --
-	(161.40, 59.17) --
-	(156.12, 59.17) --
-	cycle;
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (147.31, 62.86) --
+	(151.13, 60.69) --
+	(154.94, 60.69) --
+	(158.76, 60.69);
 \definecolor{fillColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] (145.35, 70.27) --
-	(149.28, 70.27) --
-	(149.28, 74.20) --
-	(145.35, 74.20) --
+\path[fill=fillColor] (145.35, 82.78) --
+	(149.28, 82.78) --
+	(149.28, 86.70) --
+	(145.35, 86.70) --
 	cycle;
 
-\path[fill=fillColor] (149.17, 70.27) --
-	(153.09, 70.27) --
-	(153.09, 74.19) --
-	(149.17, 74.19) --
+\path[fill=fillColor] (149.17, 82.10) --
+	(153.09, 82.10) --
+	(153.09, 86.02) --
+	(149.17, 86.02) --
 	cycle;
 
-\path[fill=fillColor] (152.98, 70.27) --
-	(156.91, 70.27) --
-	(156.91, 74.19) --
-	(152.98, 74.19) --
+\path[fill=fillColor] (152.98, 81.97) --
+	(156.91, 81.97) --
+	(156.91, 85.90) --
+	(152.98, 85.90) --
 	cycle;
 
-\path[fill=fillColor] (156.80, 70.27) --
-	(160.72, 70.27) --
-	(160.72, 74.19) --
-	(156.80, 74.19) --
+\path[fill=fillColor] (156.80, 82.01) --
+	(160.72, 82.01) --
+	(160.72, 85.93) --
+	(156.80, 85.93) --
 	cycle;
 
-\path[fill=fillColor] (160.61, 70.27) --
-	(164.54, 70.27) --
-	(164.54, 74.19) --
-	(160.61, 74.19) --
+\path[fill=fillColor] (160.61, 82.23) --
+	(164.54, 82.23) --
+	(164.54, 86.16) --
+	(160.61, 86.16) --
 	cycle;
 
-\path[fill=fillColor] (164.43, 70.27) --
-	(168.35, 70.27) --
-	(168.35, 74.19) --
-	(164.43, 74.19) --
+\path[fill=fillColor] (164.43, 82.30) --
+	(168.35, 82.30) --
+	(168.35, 86.23) --
+	(164.43, 86.23) --
 	cycle;
 
-\path[fill=fillColor] (168.24, 70.27) --
-	(172.16, 70.27) --
-	(172.16, 74.20) --
-	(168.24, 74.20) --
+\path[fill=fillColor] (168.24, 82.41) --
+	(172.16, 82.41) --
+	(172.16, 86.34) --
+	(168.24, 86.34) --
 	cycle;
 
-\path[fill=fillColor] (172.05, 70.31) --
-	(175.98, 70.31) --
-	(175.98, 74.23) --
-	(172.05, 74.23) --
+\path[fill=fillColor] (172.05, 84.24) --
+	(175.98, 84.24) --
+	(175.98, 88.16) --
+	(172.05, 88.16) --
 	cycle;
 
-\path[fill=fillColor] (175.87, 70.74) --
-	(179.79, 70.74) --
-	(179.79, 74.66) --
-	(175.87, 74.66) --
+\path[fill=fillColor] (175.87, 91.42) --
+	(179.79, 91.42) --
+	(179.79, 95.34) --
+	(175.87, 95.34) --
 	cycle;
 
-\path[fill=fillColor] (179.68, 74.99) --
-	(183.61, 74.99) --
-	(183.61, 78.91) --
-	(179.68, 78.91) --
+\path[fill=fillColor] (179.68,109.76) --
+	(183.61,109.76) --
+	(183.61,113.68) --
+	(179.68,113.68) --
+	cycle;
+\definecolor{fillColor}{RGB}{217,95,2}
+
+\path[fill=fillColor] (147.31, 75.16) --
+	(149.96, 70.58) --
+	(144.67, 70.58) --
 	cycle;
 
-\path[fill=fillColor] (183.50, 87.70) --
-	(187.42, 87.70) --
-	(187.42, 91.62) --
-	(183.50, 91.62) --
+\path[fill=fillColor] (151.13, 75.16) --
+	(153.77, 70.58) --
+	(148.49, 70.58) --
 	cycle;
 
-\path[fill=fillColor] (187.31,104.41) --
-	(191.24,104.41) --
-	(191.24,108.33) --
-	(187.31,108.33) --
+\path[fill=fillColor] (154.94, 75.16) --
+	(157.59, 70.58) --
+	(152.30, 70.58) --
 	cycle;
 
-\path[fill=fillColor] (191.13,121.39) --
-	(195.05,121.39) --
-	(195.05,125.31) --
-	(191.13,125.31) --
+\path[fill=fillColor] (158.76, 75.16) --
+	(161.40, 70.58) --
+	(156.12, 70.58) --
 	cycle;
+
+\path[fill=fillColor] (162.57, 75.16) --
+	(165.22, 70.58) --
+	(159.93, 70.58) --
+	cycle;
+
+\path[fill=fillColor] (166.39, 75.16) --
+	(169.03, 70.58) --
+	(163.75, 70.58) --
+	cycle;
+
+\path[fill=fillColor] (170.20, 75.16) --
+	(172.84, 70.58) --
+	(167.56, 70.58) --
+	cycle;
+
+\path[fill=fillColor] (174.02, 75.20) --
+	(176.66, 70.62) --
+	(171.37, 70.62) --
+	cycle;
+
+\path[fill=fillColor] (177.83, 75.64) --
+	(180.47, 71.06) --
+	(175.19, 71.06) --
+	cycle;
+
+\path[fill=fillColor] (181.65, 79.94) --
+	(184.29, 75.37) --
+	(179.00, 75.37) --
+	cycle;
+
+\path[fill=fillColor] (185.46, 92.72) --
+	(188.10, 88.15) --
+	(182.82, 88.15) --
+	cycle;
+
+\path[fill=fillColor] (189.28,109.42) --
+	(191.92,104.84) --
+	(186.63,104.84) --
+	cycle;
+
+\path[fill=fillColor] (193.09,126.40) --
+	(195.73,121.82) --
+	(190.45,121.82) --
+	cycle;
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (144.54, 62.86) -- (150.09, 62.86);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (147.31, 60.09) -- (147.31, 65.64);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.35, 60.69) -- (153.90, 60.69);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (151.13, 57.92) -- (151.13, 63.47);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (152.17, 60.69) -- (157.72, 60.69);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (154.94, 57.92) -- (154.94, 63.47);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (155.98, 60.69) -- (161.53, 60.69);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (158.76, 57.92) -- (158.76, 63.47);
+\definecolor{fillColor}{RGB}{27,158,119}
+
+\path[fill=fillColor] (147.31, 72.23) circle (  1.96);
+
+\path[fill=fillColor] (151.13, 72.23) circle (  1.96);
+
+\path[fill=fillColor] (154.94, 72.23) circle (  1.96);
+
+\path[fill=fillColor] (158.76, 72.23) circle (  1.96);
+
+\path[fill=fillColor] (162.57, 72.23) circle (  1.96);
+
+\path[fill=fillColor] (166.39, 72.23) circle (  1.96);
+
+\path[fill=fillColor] (170.20, 72.23) circle (  1.96);
+
+\path[fill=fillColor] (174.02, 72.27) circle (  1.96);
+
+\path[fill=fillColor] (177.83, 72.70) circle (  1.96);
+
+\path[fill=fillColor] (181.65, 76.95) circle (  1.96);
+
+\path[fill=fillColor] (185.46, 89.66) circle (  1.96);
+
+\path[fill=fillColor] (189.28,106.37) circle (  1.96);
+
+\path[fill=fillColor] (193.09,123.35) circle (  1.96);
 \definecolor{drawColor}{gray}{0.70}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (143.50, 57.56) -- (143.50, 63.25);
@@ -690,24 +663,7 @@
 	(352.08,126.48);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (256.72, 85.43) --
-	(260.53, 83.72) --
-	(264.35, 83.89) --
-	(268.16, 83.69) --
-	(271.97, 85.93) --
-	(275.79,108.62);
-\definecolor{drawColor}{RGB}{217,95,2}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (256.72, 61.86) --
-	(260.53, 61.00) --
-	(264.35, 61.00) --
-	(268.16, 61.00) --
-	(271.97, 61.00) --
-	(275.79, 61.15) --
-	(279.60, 61.15);
-\definecolor{drawColor}{RGB}{117,112,179}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (256.72, 73.16) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] (256.72, 73.16) --
 	(260.53, 73.16) --
 	(264.35, 73.16) --
 	(268.16, 73.16) --
@@ -733,9 +689,9 @@
 	(344.45, 94.24) --
 	(348.27,100.04) --
 	(352.08,106.25);
-\definecolor{drawColor}{RGB}{231,41,138}
+\definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (256.72, 72.63) --
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (256.72, 72.63) --
 	(260.53, 72.63) --
 	(264.35, 72.63) --
 	(268.16, 72.63) --
@@ -761,316 +717,272 @@
 	(344.45, 94.08) --
 	(348.27, 99.98) --
 	(352.08,106.31);
+\definecolor{drawColor}{RGB}{117,112,179}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (256.72, 85.43) --
+	(260.53, 83.72) --
+	(264.35, 83.89) --
+	(268.16, 83.69) --
+	(271.97, 85.93) --
+	(275.79,108.62);
+\definecolor{drawColor}{RGB}{231,41,138}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (256.72, 61.86) --
+	(260.53, 61.00) --
+	(264.35, 61.00) --
+	(268.16, 61.00) --
+	(271.97, 61.00) --
+	(275.79, 61.15) --
+	(279.60, 61.15);
+\definecolor{fillColor}{RGB}{27,158,119}
+
+\path[fill=fillColor] (256.72, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (260.53, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (264.35, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (268.16, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (271.97, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (275.79, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (279.60, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (283.42, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (287.23, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (291.05, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (294.86, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (298.68, 73.16) circle (  1.96);
+
+\path[fill=fillColor] (302.49, 73.17) circle (  1.96);
+
+\path[fill=fillColor] (306.31, 73.17) circle (  1.96);
+
+\path[fill=fillColor] (310.12, 73.20) circle (  1.96);
+
+\path[fill=fillColor] (313.94, 73.25) circle (  1.96);
+
+\path[fill=fillColor] (317.75, 73.38) circle (  1.96);
+
+\path[fill=fillColor] (321.56, 73.71) circle (  1.96);
+
+\path[fill=fillColor] (325.38, 74.42) circle (  1.96);
+
+\path[fill=fillColor] (329.19, 76.07) circle (  1.96);
+
+\path[fill=fillColor] (333.01, 78.80) circle (  1.96);
+
+\path[fill=fillColor] (336.82, 82.57) circle (  1.96);
+
+\path[fill=fillColor] (340.64, 87.78) circle (  1.96);
+
+\path[fill=fillColor] (344.45, 94.24) circle (  1.96);
+
+\path[fill=fillColor] (348.27,100.04) circle (  1.96);
+
+\path[fill=fillColor] (352.08,106.25) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (253.94, 61.86) -- (259.49, 61.86);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (256.72, 59.08) -- (256.72, 64.63);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (257.76, 61.00) -- (263.31, 61.00);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (260.53, 58.23) -- (260.53, 63.78);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (261.57, 61.00) -- (267.12, 61.00);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (264.35, 58.23) -- (264.35, 63.78);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (265.39, 61.00) -- (270.94, 61.00);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (268.16, 58.23) -- (268.16, 63.78);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (269.20, 61.00) -- (274.75, 61.00);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (271.97, 58.23) -- (271.97, 63.78);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (273.01, 61.15) -- (278.56, 61.15);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (275.79, 58.38) -- (275.79, 63.93);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (276.83, 61.15) -- (282.38, 61.15);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (279.60, 58.38) -- (279.60, 63.93);
 \definecolor{fillColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] (254.75, 71.20) --
-	(258.68, 71.20) --
-	(258.68, 75.12) --
-	(254.75, 75.12) --
+\path[fill=fillColor] (254.75, 83.46) --
+	(258.68, 83.46) --
+	(258.68, 87.39) --
+	(254.75, 87.39) --
 	cycle;
 
-\path[fill=fillColor] (258.57, 71.20) --
-	(262.49, 71.20) --
-	(262.49, 75.12) --
-	(258.57, 75.12) --
+\path[fill=fillColor] (258.57, 81.76) --
+	(262.49, 81.76) --
+	(262.49, 85.68) --
+	(258.57, 85.68) --
 	cycle;
 
-\path[fill=fillColor] (262.38, 71.20) --
-	(266.31, 71.20) --
-	(266.31, 75.12) --
-	(262.38, 75.12) --
+\path[fill=fillColor] (262.38, 81.92) --
+	(266.31, 81.92) --
+	(266.31, 85.85) --
+	(262.38, 85.85) --
 	cycle;
 
-\path[fill=fillColor] (266.20, 71.20) --
-	(270.12, 71.20) --
-	(270.12, 75.12) --
-	(266.20, 75.12) --
+\path[fill=fillColor] (266.20, 81.73) --
+	(270.12, 81.73) --
+	(270.12, 85.66) --
+	(266.20, 85.66) --
 	cycle;
 
-\path[fill=fillColor] (270.01, 71.20) --
-	(273.94, 71.20) --
-	(273.94, 75.12) --
-	(270.01, 75.12) --
+\path[fill=fillColor] (270.01, 83.97) --
+	(273.94, 83.97) --
+	(273.94, 87.89) --
+	(270.01, 87.89) --
 	cycle;
 
-\path[fill=fillColor] (273.83, 71.20) --
-	(277.75, 71.20) --
-	(277.75, 75.12) --
-	(273.83, 75.12) --
-	cycle;
-
-\path[fill=fillColor] (277.64, 71.20) --
-	(281.57, 71.20) --
-	(281.57, 75.12) --
-	(277.64, 75.12) --
-	cycle;
-
-\path[fill=fillColor] (281.46, 71.20) --
-	(285.38, 71.20) --
-	(285.38, 75.12) --
-	(281.46, 75.12) --
-	cycle;
-
-\path[fill=fillColor] (285.27, 71.20) --
-	(289.20, 71.20) --
-	(289.20, 75.12) --
-	(285.27, 75.12) --
-	cycle;
-
-\path[fill=fillColor] (289.09, 71.20) --
-	(293.01, 71.20) --
-	(293.01, 75.12) --
-	(289.09, 75.12) --
-	cycle;
-
-\path[fill=fillColor] (292.90, 71.20) --
-	(296.82, 71.20) --
-	(296.82, 75.12) --
-	(292.90, 75.12) --
-	cycle;
-
-\path[fill=fillColor] (296.72, 71.20) --
-	(300.64, 71.20) --
-	(300.64, 75.12) --
-	(296.72, 75.12) --
-	cycle;
-
-\path[fill=fillColor] (300.53, 71.21) --
-	(304.45, 71.21) --
-	(304.45, 75.13) --
-	(300.53, 75.13) --
-	cycle;
-
-\path[fill=fillColor] (304.34, 71.21) --
-	(308.27, 71.21) --
-	(308.27, 75.14) --
-	(304.34, 75.14) --
-	cycle;
-
-\path[fill=fillColor] (308.16, 71.24) --
-	(312.08, 71.24) --
-	(312.08, 75.16) --
-	(308.16, 75.16) --
-	cycle;
-
-\path[fill=fillColor] (311.97, 71.29) --
-	(315.90, 71.29) --
-	(315.90, 75.22) --
-	(311.97, 75.22) --
-	cycle;
-
-\path[fill=fillColor] (315.79, 71.42) --
-	(319.71, 71.42) --
-	(319.71, 75.35) --
-	(315.79, 75.35) --
-	cycle;
-
-\path[fill=fillColor] (319.60, 71.75) --
-	(323.53, 71.75) --
-	(323.53, 75.67) --
-	(319.60, 75.67) --
-	cycle;
-
-\path[fill=fillColor] (323.42, 72.46) --
-	(327.34, 72.46) --
-	(327.34, 76.39) --
-	(323.42, 76.39) --
-	cycle;
-
-\path[fill=fillColor] (327.23, 74.10) --
-	(331.16, 74.10) --
-	(331.16, 78.03) --
-	(327.23, 78.03) --
-	cycle;
-
-\path[fill=fillColor] (331.05, 76.84) --
-	(334.97, 76.84) --
-	(334.97, 80.76) --
-	(331.05, 80.76) --
-	cycle;
-
-\path[fill=fillColor] (334.86, 80.61) --
-	(338.79, 80.61) --
-	(338.79, 84.53) --
-	(334.86, 84.53) --
-	cycle;
-
-\path[fill=fillColor] (338.68, 85.82) --
-	(342.60, 85.82) --
-	(342.60, 89.74) --
-	(338.68, 89.74) --
-	cycle;
-
-\path[fill=fillColor] (342.49, 92.28) --
-	(346.41, 92.28) --
-	(346.41, 96.20) --
-	(342.49, 96.20) --
-	cycle;
-
-\path[fill=fillColor] (346.30, 98.07) --
-	(350.23, 98.07) --
-	(350.23,102.00) --
-	(346.30,102.00) --
-	cycle;
-
-\path[fill=fillColor] (350.12,104.29) --
-	(354.04,104.29) --
-	(354.04,108.21) --
-	(350.12,108.21) --
+\path[fill=fillColor] (273.83,106.66) --
+	(277.75,106.66) --
+	(277.75,110.59) --
+	(273.83,110.59) --
 	cycle;
 \definecolor{fillColor}{RGB}{217,95,2}
 
-\path[fill=fillColor] (256.72, 64.91) --
-	(259.36, 60.33) --
-	(254.07, 60.33) --
+\path[fill=fillColor] (256.72, 75.68) --
+	(259.36, 71.10) --
+	(254.07, 71.10) --
 	cycle;
 
-\path[fill=fillColor] (260.53, 64.05) --
-	(263.17, 59.48) --
-	(257.89, 59.48) --
+\path[fill=fillColor] (260.53, 75.68) --
+	(263.17, 71.10) --
+	(257.89, 71.10) --
 	cycle;
 
-\path[fill=fillColor] (264.35, 64.05) --
-	(266.99, 59.48) --
-	(261.70, 59.48) --
+\path[fill=fillColor] (264.35, 75.68) --
+	(266.99, 71.10) --
+	(261.70, 71.10) --
 	cycle;
 
-\path[fill=fillColor] (268.16, 64.05) --
-	(270.80, 59.48) --
-	(265.52, 59.48) --
+\path[fill=fillColor] (268.16, 75.68) --
+	(270.80, 71.10) --
+	(265.52, 71.10) --
 	cycle;
 
-\path[fill=fillColor] (271.97, 64.05) --
-	(274.62, 59.48) --
-	(269.33, 59.48) --
+\path[fill=fillColor] (271.97, 75.68) --
+	(274.62, 71.10) --
+	(269.33, 71.10) --
 	cycle;
 
-\path[fill=fillColor] (275.79, 64.20) --
-	(278.43, 59.63) --
-	(273.15, 59.63) --
+\path[fill=fillColor] (275.79, 75.68) --
+	(278.43, 71.10) --
+	(273.15, 71.10) --
 	cycle;
 
-\path[fill=fillColor] (279.60, 64.20) --
-	(282.25, 59.63) --
-	(276.96, 59.63) --
+\path[fill=fillColor] (279.60, 75.68) --
+	(282.25, 71.10) --
+	(276.96, 71.10) --
 	cycle;
-\definecolor{fillColor}{RGB}{27,158,119}
 
-\path[fill=fillColor] (256.72, 85.43) circle (  1.96);
+\path[fill=fillColor] (283.42, 75.68) --
+	(286.06, 71.10) --
+	(280.78, 71.10) --
+	cycle;
 
-\path[fill=fillColor] (260.53, 83.72) circle (  1.96);
+\path[fill=fillColor] (287.23, 75.68) --
+	(289.88, 71.10) --
+	(284.59, 71.10) --
+	cycle;
 
-\path[fill=fillColor] (264.35, 83.89) circle (  1.96);
+\path[fill=fillColor] (291.05, 75.68) --
+	(293.69, 71.10) --
+	(288.41, 71.10) --
+	cycle;
 
-\path[fill=fillColor] (268.16, 83.69) circle (  1.96);
+\path[fill=fillColor] (294.86, 75.68) --
+	(297.51, 71.10) --
+	(292.22, 71.10) --
+	cycle;
 
-\path[fill=fillColor] (271.97, 85.93) circle (  1.96);
+\path[fill=fillColor] (298.68, 75.68) --
+	(301.32, 71.10) --
+	(296.03, 71.10) --
+	cycle;
 
-\path[fill=fillColor] (275.79,108.62) circle (  1.96);
+\path[fill=fillColor] (302.49, 75.69) --
+	(305.13, 71.11) --
+	(299.85, 71.11) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (253.94, 72.63) -- (259.49, 72.63);
+\path[fill=fillColor] (306.31, 75.69) --
+	(308.95, 71.12) --
+	(303.66, 71.12) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (256.72, 69.85) -- (256.72, 75.40);
+\path[fill=fillColor] (310.12, 75.72) --
+	(312.76, 71.14) --
+	(307.48, 71.14) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (257.76, 72.63) -- (263.31, 72.63);
+\path[fill=fillColor] (313.94, 75.78) --
+	(316.58, 71.20) --
+	(311.29, 71.20) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (260.53, 69.85) -- (260.53, 75.40);
+\path[fill=fillColor] (317.75, 75.92) --
+	(320.39, 71.34) --
+	(315.11, 71.34) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (261.57, 72.63) -- (267.12, 72.63);
+\path[fill=fillColor] (321.56, 76.27) --
+	(324.21, 71.69) --
+	(318.92, 71.69) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (264.35, 69.85) -- (264.35, 75.40);
+\path[fill=fillColor] (325.38, 77.01) --
+	(328.02, 72.44) --
+	(322.74, 72.44) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (265.39, 72.63) -- (270.94, 72.63);
+\path[fill=fillColor] (329.19, 78.63) --
+	(331.84, 74.06) --
+	(326.55, 74.06) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (268.16, 69.85) -- (268.16, 75.40);
+\path[fill=fillColor] (333.01, 81.55) --
+	(335.65, 76.97) --
+	(330.37, 76.97) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (269.20, 72.63) -- (274.75, 72.63);
+\path[fill=fillColor] (336.82, 85.37) --
+	(339.47, 80.80) --
+	(334.18, 80.80) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (271.97, 69.85) -- (271.97, 75.40);
+\path[fill=fillColor] (340.64, 90.67) --
+	(343.28, 86.09) --
+	(338.00, 86.09) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (273.01, 72.63) -- (278.56, 72.63);
+\path[fill=fillColor] (344.45, 97.14) --
+	(347.10, 92.56) --
+	(341.81, 92.56) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (275.79, 69.85) -- (275.79, 75.40);
+\path[fill=fillColor] (348.27,103.03) --
+	(350.91, 98.45) --
+	(345.62, 98.45) --
+	cycle;
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (276.83, 72.63) -- (282.38, 72.63);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (279.60, 69.86) -- (279.60, 75.40);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (280.64, 72.63) -- (286.19, 72.63);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (283.42, 69.85) -- (283.42, 75.40);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (284.46, 72.63) -- (290.01, 72.63);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (287.23, 69.85) -- (287.23, 75.40);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (288.27, 72.63) -- (293.82, 72.63);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (291.05, 69.86) -- (291.05, 75.40);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (292.09, 72.63) -- (297.64, 72.63);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (294.86, 69.86) -- (294.86, 75.40);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (295.90, 72.63) -- (301.45, 72.63);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (298.68, 69.86) -- (298.68, 75.40);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (299.72, 72.64) -- (305.27, 72.64);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.49, 69.86) -- (302.49, 75.41);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (303.53, 72.64) -- (309.08, 72.64);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (306.31, 69.87) -- (306.31, 75.42);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (307.35, 72.67) -- (312.90, 72.67);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (310.12, 69.90) -- (310.12, 75.45);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.16, 72.73) -- (316.71, 72.73);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (313.94, 69.95) -- (313.94, 75.50);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (314.98, 72.87) -- (320.53, 72.87);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (317.75, 70.09) -- (317.75, 75.64);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (318.79, 73.21) -- (324.34, 73.21);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (321.56, 70.44) -- (321.56, 75.99);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (322.60, 73.96) -- (328.15, 73.96);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (325.38, 71.19) -- (325.38, 76.74);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (326.42, 75.58) -- (331.97, 75.58);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (329.19, 72.81) -- (329.19, 78.36);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (330.23, 78.49) -- (335.78, 78.49);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (333.01, 75.72) -- (333.01, 81.27);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (334.05, 82.32) -- (339.60, 82.32);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (336.82, 79.55) -- (336.82, 85.10);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (337.86, 87.62) -- (343.41, 87.62);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (340.64, 84.84) -- (340.64, 90.39);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (341.68, 94.08) -- (347.23, 94.08);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (344.45, 91.31) -- (344.45, 96.86);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (345.49, 99.98) -- (351.04, 99.98);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (348.27, 97.20) -- (348.27,102.75);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (349.31,106.31) -- (354.86,106.31);
-
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (352.08,103.54) -- (352.08,109.09);
+\path[fill=fillColor] (352.08,109.36) --
+	(354.72,104.79) --
+	(349.44,104.79) --
+	cycle;
 \definecolor{drawColor}{gray}{0.70}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (252.90, 57.56) -- (252.90, 63.25);
@@ -1310,112 +1222,112 @@
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 51.80,  4.50) rectangle (338.20, 27.95);
+\path[fill=fillColor] ( 52.31,  4.50) rectangle (337.68, 27.95);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] ( 60.80,  9.00) rectangle ( 75.25, 23.45);
+\path[fill=fillColor] ( 61.31,  9.00) rectangle ( 75.77, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.24, 16.23) -- ( 73.81, 16.23);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 62.76, 16.23) -- ( 74.32, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{RGB}{27,158,119}
 
-\path[fill=fillColor] ( 68.02, 16.23) circle (  1.96);
+\path[fill=fillColor] ( 68.54, 16.23) circle (  1.96);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] (132.24,  9.00) rectangle (146.69, 23.45);
+\path[fill=fillColor] (129.38,  9.00) rectangle (143.83, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (133.68, 16.23) -- (145.25, 16.23);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (130.83, 16.23) -- (142.39, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{RGB}{217,95,2}
 
-\path[fill=fillColor] (139.46, 19.28) --
-	(142.11, 14.70) --
-	(136.82, 14.70) --
+\path[fill=fillColor] (136.61, 19.28) --
+	(139.25, 14.70) --
+	(133.97, 14.70) --
 	cycle;
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] (188.77,  9.00) rectangle (203.22, 23.45);
+\path[fill=fillColor] (209.71,  9.00) rectangle (224.16, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{117,112,179}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (190.22, 16.23) -- (201.78, 16.23);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 2pt ,line join=round] (211.15, 16.23) -- (222.72, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{RGB}{117,112,179}
 
-\path[fill=fillColor] (194.03, 14.26) --
-	(197.96, 14.26) --
-	(197.96, 18.19) --
-	(194.03, 18.19) --
+\path[fill=fillColor] (214.97, 14.26) --
+	(218.90, 14.26) --
+	(218.90, 18.19) --
+	(214.97, 18.19) --
 	cycle;
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{fillColor}{gray}{0.92}
 
-\path[fill=fillColor] (257.35,  9.00) rectangle (271.81, 23.45);
+\path[fill=fillColor] (281.15,  9.00) rectangle (295.60, 23.45);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (258.80, 16.23) -- (270.36, 16.23);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round] (282.59, 16.23) -- (294.16, 16.23);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (261.81, 16.23) -- (267.35, 16.23);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (285.60, 16.23) -- (291.15, 16.23);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (264.58, 13.45) -- (264.58, 19.00);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (288.38, 13.45) -- (288.38, 19.00);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 79.75, 13.75) {\textsc{FastWFOMC}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 80.27, 13.75) {\textsc{Crane2-BFS}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (151.19, 13.75) {\textsc{ForcLift}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (148.33, 13.75) {\textsc{Crane2-Greedy}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (207.72, 13.75) {\textsc{Gantry-BFS}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (228.66, 13.75) {\textsc{FastWFOMC}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (276.31, 13.75) {\textsc{Gantry-Greedy}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (300.10, 13.75) {\textsc{ForcLift}};
 \end{scope}
 \end{tikzpicture}
 
